# ffiasl-testing

./: CMakeLists.txt  Dockerfile  sync_ffiasm_tests.sh
.github/workflows/: altbn128.yml  ffiasm.yml  linux.yml
